<resources>
    <string name="app_name">Где курьер</string>
    <string name="title_activity_delivery_drawer">DeliveryDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">Профиль</string>
    <string name="current_orders">Текущие заказы</string>
    <string name="delivered_orders">Доставленные заказы</string>
    <string name="couriers">Курьеры</string>
    <string name="reviews">Отзывы</string>
    <string name="post">Должность</string>
    <string name="made_per_day">За день</string>
    <string name="on_hands">На руках</string>
    <string name="middle_time">Среднее время</string>
    <string name="photo">Аватар</string>
    <string name="edit">Редактировать</string>
    <string name="exit">Выход</string>
    <string name="title_activity_test_main">TestMain</string>
    <string name="new_order">Новый заказ</string>
    <string name="address">Адрес</string>
    <string name="creation_date">Дата создания</string>
    <string name="deadline">Крайний срок</string>
    <string name="way">Расстояние</string>
    <string name="rating">Рейтинг</string>
    <string name="comment">Комментарий</string>
    <string name="courier_have">У курьера</string>
    <string name="delivered">Доставлен</string>
    <string name="description">Описание</string>
    <string name="title">Название</string>
    <string name="curiers">Курьеры</string>
    <string name="name">Имя</string>
    <string name="status">Статус</string>
    <string name="phone">Телефон</string>
    <string name="per_day">Сделано за день</string>
    <string name="orders_on_hand">Заказов на руках</string>
    <string name="filter">Фильтр</string>
    <string name="search">Поиск</string>
    <string name="addresses">Адреса/контакты</string>
</resources>
