<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/photo" />

        <ImageButton
            android:id="@+id/btnEditPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/ivPhoto"
            android:layout_marginLeft="-50dp"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="-58dp"
            android:layout_toEndOf="@+id/ivPhoto"
            android:layout_toRightOf="@+id/ivPhoto"
            android:background="@drawable/round_btn"
            android:contentDescription="@string/edit"
            android:padding="8dp"
            android:src="@drawable/ic_edit" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <TextView
            android:id="@+id/tvPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post" />

        <TextView
            android:id="@+id/tvMadePerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/made_per_day" />

        <TextView
            android:id="@+id/tvOnHands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_hands" />


        <TextView
            android:id="@+id/tvMiddleTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_time" />

    </LinearLayout>


</LinearLayout>